MFC r226681: Only unlock if the lock is exclusive.

PR:		kern/161956